<resources>

  <string name="app_name">WOA Helper - Vayu</string>
  <string name="error_title">An unexpected error occurred.\nSorry for the inconvenience.</string>
  <string name="app_title">Windows on ARM Helper - Vayu</string>
  <string name="app_subtitle">Version %s</string>

  <string name="dump_sensors_title">PROVISION SENSORS</string>
  <string name="dump_modem_title">PROVISION MODEM</string>
  <string name="quickboot_title">QUICKBOOT TO WINDOWS</string>
  <string name="backup_boot_title">BACKUP BOOT</string>

  <string name="dump_sensors_question">Provision sensors to Windows partition?</string>
  <string name="dump_modem_question">Provision modem1st and modem2st to Windows partition?</string>
  <string name="quickboot_question">Quick Boot to Windows?</string>
  <string name="backup_boot_question">Backup current android boot to Internal Storage?</string>

  <string name="dump_sensors_subtitle">Provision sensors to Windows is required one time only to repair the sensors on Windows</string>
  <string name="dump_modem_subtitle">Provision modem1st and modem2st to Windows to fix LTE on SIM1 on Windows everytime you want to boot to Windows</string>
  <string name="backup_boot_subtitle">Backup current boot image</string>
  <string name="quickboot_subtitle">Provision Modem, Flash UEFI, and Reboot to Windows in one click</string>

  <string name="ramvalue">DEVICE MEMORY : %sGB</string>
  <string name="paneltype">DEVICE PANEL : %s</string>

  <string name="uefi_version">UEFI : %s</string>
  <string name="backup_status">BOOT BACKUP : %s</string>

  <string name="woa">Renegade Project Devices</string>
  <string name="device">DEVICE MODEL : %s</string>

  <string name="guide">Installation\nGuide</string>
  <string name="group">Support\nGroup</string>

  <string name="not_found">Not Found</string>
  <string name="backup_successfull">Backup boot image successful...</string>
  <string name="flash_uefi_successfull">UEFI for %1s panel %2s GB Variant successfully flashed to boot partition.\nNext reboot will boot into Windows</string>
  <string name="yes">YES</string>
  <string name="no">NO</string>
  <string name="devright">Vern Kuato 2022 - 2023</string>
  <string name="dismiss">DISMISS</string>
  <string name="please_wait">PLEASE WAIT...</string>

  <string name="flash_uefi_title">FLASH PREBUILT UEFI</string>
  <string name="flash_uefi_subtitle">UEFI for %1s touch panel of %2s GB variant is ready to flash</string>
  <string name="uefi_not_found">UEFI NOT FOUND</string>
  <string name="uefi_not_found_subtitle">Your devices is not supported</string>

  <string name="flash_uefi_question">Flash prebuilt UEFI for %1s touch panel for %2s GB of RAM variant?</string>
  <string name="youtube">YOUTUBE</string>
  <string name="paypal">DONATE</string>
  <string name="telegram">UPDATE</string>
  <string name="instagram">INSTAGRAM</string>

  <string name="exit_app">Exit from applications?</string>
  <string name="cancel">Cancel</string>
  <string name="exit">Exit</string>
  <string name="support_ntfs">SUPPORT MOUNT NTFS : %s</string>
  <string name="windows_installed">WINDOWS INSTALLED : %s</string>
  <string name="windows_mounted">WINDOWS MOUNTED : %s</string>>
  <string name="error">Error</string>
  <string name="provision_modem">Modem Provisioned Successfully...\nEnjoy LTE on Windows :)</string>
  <string name="provision_sensors">Sensors Provisioned Successfully...\nEnjoy working sensors on Windows :)</string>
  <string name="reboot_windows">Reboot to windows now...</string>
  <string name="flash_ntfs">Flash NTFS-3G Module?</string>
  <string name="need_magisk">MAGISK NEEDED TO RUN THIS APP</string>
  <string name="format">Erasing entire Windows partition successfull.\nDont ever to modify my apps.. \nThank You</string>
  <string name="agreement_title">AGREEMENTS</string>
  <string name="agreement">Disclaimer.\nThe WoA Helper App is provided \"as is\" and without warranties of any kind. KuatoDev makes no warranties, express or implied, as to the accuracy, quality, reliability, suitability, availability, or completeness of the WoA Helper App. \n\nKuatoDev will not be liable for any damages arising from the use of the WoA Helper App, including but not limited to direct, indirect, incidental, punitive, and consequential damages.</string>
  <string name="agree">I agree</string>
  <string name="not_agree">I do not agree</string>
  <string name="need_root_message">Root access is required. Please root your device to use this app.</string>
  
    <string name="key_about">About</string>
  <string name="key_credits">Credits</string>
  <string name="key_channel">KuatoDev Channel</string>
  <string name="key_group">GreenForce Official Group</string>
  <string name="key_donate">Donate</string>
  <string name="key_instagram">Instagram</string>
  <string name="key_youtube">Youtube</string>
  <string name="donate">Buy me a coffee</string>
  <string name="donate_summary">Support us with your donations ^_^</string>
  <string name="donate_thank">We will appreciate any amount of your donations</string>
  <string name="summary_about">Package Name : %1s\nVersion Name : %2s\nVersion Code : %3s</string>
  <string name="credits">CREDITS</string>
  <string name="created_by">Created by KuatoDev-Projects</string>
  <string name="ida_bag">• Ida Bagus Rama Mahendra</string>
  <string name="mobxprjkt">• mobxprjkt a.k.a c3eru@github</string>
  <string name="nabil_aba">• Nabil ABA</string>
  <string name="otang45">• Otang45</string>
  <string name="stackoverflow">• StackOverflow community for code reference</string>
  <string name="greenforce">• GreenForce™ Kernel developers and contributors</string>
</resources>
