<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="14dp"
  android:orientation="horizontal">

  <ImageView
    android:layout_width="96dp"
    android:src="@drawable/device"
    android:scaleType="fitXY"
    android:layout_height="200dp" />

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/cv_info"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    app:cardBackgroundColor="@color/colorSurface"
    android:adjustViewBounds="true"
    android:animateLayoutChanges="true"
    android:clickable="true"
    android:layout_weight="1"
    android:elevation="@dimen/cardElevation"
    android:foreground="?android:attr/selectableItemBackground"
    android:gravity="center"
    android:padding="@dimen/parentMargin"
    android:stateListAnimator="@anim/state_list_anim"
    app:cardCornerRadius="@dimen/cardCornerRadius"
    app:cardMaxElevation="0dp">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="8dp">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/woa_title"
        android:text="@string/woa"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_below="@id/woa_title"
        android:layout_above="@id/menubar"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:textSize="11dp"
          android:id="@+id/tv_device"
          android:text="@string/device" />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:textSize="11dp"
          android:text="@string/windows_installed"
          android:id="@+id/tv_windows_installed" />

        <TextView
          android:id="@+id/tv_ramvalue"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="11dp"
          android:layout_gravity="center" />

        <TextView
          android:id="@+id/tv_panel"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="11dp"
          android:layout_gravity="center" />

        <TextView
          android:id="@+id/tv_uefi_version"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="11dp"
          android:layout_gravity="center" />

        <TextView
          android:id="@+id/tv_backup_status"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="11dp"
          android:layout_gravity="center" />

        <TextView
          android:id="@+id/tv_ntfs_support"
          android:layout_width="match_parent"
          android:textSize="11dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center" />

      </LinearLayout>
      <include
        android:id="@+id/menubar"
        layout="@layout/menubar" />
    </RelativeLayout>

  </com.google.android.material.card.MaterialCardView>
</LinearLayout>
